[tool.poetry]
name = "rps"
version = "0.1.0"
description = "Rock paper Scissors"
authors = ['Tzvika']

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
pylint = "^2.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
